fix: CORS allowCredentials config, add OPTIONS preflight permit